--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,56 @@
 body {
   font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 1px;
 }
 
 body > * {
-  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  max-width: 90vw;
+}
+
+ol,
+ul {
+  padding-left: 1.5rem;
+  margin-block: 0;
 }
 
 ul > li:not(:last-child),
 ol > li:not(:last-child) {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 ol > li::marker {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: normal;
+}
+
+.offset-off {
+  width: calc(100% + 1.5rem);
+  margin-left: -1.5rem;
 }
 
 .header {
   position: relative;
   display: grid;
   align-items: center;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr;
+  text-align: center;
+  gap: 0.75rem;
+  grid-template-areas: "header-logo" "header-title";
+  margin-bottom: 1rem;
 }
 
 .header__title {
+  grid-area: header-title;
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.75rem;
+  margin: 0;
+}
+
+.header__logo {
+  grid-area: header-logo;
 }
 
 .logo {
@@ -39,29 +62,49 @@ ol > li::marker {
 
 .logo__title {
   text-transform: uppercase;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 .logo__image {
   display: block;
-  width: 200px;
+  width: 150px;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.75rem;
 }
 
 .form__control {
   display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 8px;
-  width: 100%;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .form__control input {
-  width: 100%;
   outline: none;
   border-top: none;
   border-right: none;
   border-left: none;
+  padding: 0.5rem;
+  border-width: 1px;
+  font-size: 1rem;
   line-height: 1.25rem;
-  margin-bottom: 8px;
+}
+
+.form__control.border input {
+  border: none;
+}
+
+.form__control textarea {
+  resize: vertical;
+  padding: 0.5rem;
+  font-family: Arial, sans-serif;
+  border-color: #808080;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  line-height: 1.25rem;
 }
 
 .form__inline-group {
@@ -71,9 +114,9 @@ ol > li::marker {
 
 .price-checkbox {
   display: grid;
-  gap: 12px;
-  grid-template-columns: 50px 100px auto;
-  grid-template-rows: 50px;
+  gap: 0.75rem;
+  grid-template-columns: 36px 72px auto;
+  grid-template-rows: 36px;
   align-items: center;
 }
 
@@ -88,12 +131,13 @@ ol > li::marker {
   border-right: none;
   border-left: none;
   line-height: 1.25rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
+  text-align: right;
+  border-width: 1px;
 }
 
 .price-checkbox__currency {
-  line-height: 1.25rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 .image__container {
@@ -104,17 +148,16 @@ ol > li::marker {
 
 .image__container img {
   display: block;
-  object-fit: contain;
   width: 100%;
+  height: auto;
 }
 
-.image__container input[type=checkbox] {
+.image__container input[type="checkbox"] {
   position: absolute;
-  width: 18px;
-  height: 18px;
 }
 
 .list-item {
+  gap: 0.25rem;
   display: grid;
   width: 100%;
   grid-template-areas:
@@ -123,21 +166,12 @@ ol > li::marker {
     "li-content";
 }
 
-.list-item--inline {
-  gap: 0.5rem 2rem;
-  align-items: start;
-  grid-template-columns: 1fr auto;
-  grid-template-areas:
-    "li-title li-content"
-    "li-description li-content";
-}
-
 .list-item__title {
   grid-area: li-title;
   margin: 0;
   font-weight: normal;
-  font-size: 1.75rem;
-  line-height: 1.75rem;
+  font-size: 1.3rem;
+  line-height: 1.3rem;
 }
 
 .list-item__description {
@@ -152,28 +186,115 @@ ol > li::marker {
 .list-item__content {
   grid-area: li-content;
   display: grid;
-  gap: 2rem;
-}
-
-.list-item__content li:first-child {
-  padding-top: 1rem;
+  gap: 1rem;
 }
 
 .column--1-1 {
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
 }
 
 .column--2-1 {
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr;
 }
 
 .options-section {
+  padding-block: 0.75rem;
   display: grid;
-  gap: 2rem;
+  gap: 1rem;
   grid-template-rows: 1fr auto;
+}
+
+.options-section__list {
+  list-style-type: disc;
 }
 
 .options-section__description {
   align-self: flex-end;
   margin: 0;
+}
+
+.border {
+  border: 1px solid #808080;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+}
+
+@media screen and (min-width: 768px) {
+  .list-item--inline {
+    align-items: start;
+    grid-template-columns: 1fr auto;
+    grid-template-areas:
+      "li-title li-content"
+      "li-description li-content";
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body > * {
+    --width: 1024px;
+    max-width: calc(var(--width) - 2rem);
+  }
+
+  .header {
+    grid-template-columns: 1fr auto;
+    grid-template-areas: "header-title header-logo";
+    text-align: unset;
+  }
+
+  .column--auto-1 {
+    grid-template-columns: auto 1fr;
+  }
+
+  .column--1-1 {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .column--2-1 {
+    grid-template-columns: 2fr 1fr;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  body > * {
+    --width: 1280px;
+  }
+}
+
+@media screen and (min-width: 1536px) {
+  body > * {
+    --width: 1536px;
+  }
+}
+
+@media print {
+  body > * {
+    max-width: unset;
+    margin: 0;
+  }
+
+  .header {
+    grid-template-columns: 1fr auto;
+    grid-template-areas: "header-title header-logo";
+    text-align: unset;
+  }
+
+  .column--auto-1 {
+    grid-template-columns: auto 1fr;
+  }
+
+  .column--1-1 {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .column--2-1 {
+    grid-template-columns: 2fr 1fr;
+  }
+
+  .list-item--inline {
+    align-items: start;
+    grid-template-columns: 1fr auto;
+    grid-template-areas:
+      "li-title li-content"
+      "li-description li-content";
+  }
 }
