--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ ol > li::marker {
 .price-checkbox__check {
   width: 100%;
   height: 100%;
+  border-radius: 0.25rem;
 }
 
 .price-checkbox__price {
